# fe-cli

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  TODO.md
dat/: fea_baseclass_data_results.txt  logo_en.txt  logo_jp.txt
docs/: README.md  architecture.md  design.md  testing.md
lib/: feClass.h
src/: feBonus.cpp  feBonus.h  feBuff.cpp  feBuff.h  feCharacter.cpp  feCharacter.h  feClass.cpp  feClass.h  feConsumable.cpp  feItem.h  feJsonUtils.cpp  feJsonUtils.h  feMap.h  feMechanics.cpp  feMechanics.h  feRoster.cpp  feRoster.h  feSecondaryStats.cpp  feSecondaryStats.h  feSkill.cpp  feSkill.h  feSkillCombat.h  feSkillMap.h  feSkillStat.h  feStats.cpp  feStats.h  feTile.h  feUtils.cpp  feUtils.h  feVendor.h  feWeapon.cpp  feWeapon.h  feWeaponRank.cpp  main.cpp  tests.cpp
src/classes/: feCharacter.cpp  feCharacter.h  feClass.cpp  feClass.h  feConsumable.h  feItem.h  feMap.h  feMechanics.h  feMechanics_Fates.cpp  feMechanics_Fates.h  feRank.h  feRoster.cpp  feRoster.h  feSkill.h  feStats.h  feSupport.h  feUtils.cpp  feUtils.h  feVendor.h  feWeapon.cpp  feWeapon.h  feWeaponRank.cpp  feWeaponRank.h
src/skills/: feSkillHP5.h
tests/: character.cpp  jsonUtils.cpp  mechanics.cpp  stats.cpp  tests.cpp  utils.cpp
